[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysde_sentaurus"
version = "0.0.1"
authors = [
  { name="Marc de Cea", email="mdecea@mit.edu" },
]
description = "Package to write sentaurus structure files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]